2005-03-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/autil.c (am_mounted): completely rewrite the unmount
	no/timeout code to (1) make more sense for odd conditions, and (2)
	allow utimeout=N mount options to override FS_NOTIMEOUT default
	flags for disk-based file systems such as ufs, pcfs, cdfs, etc.

	* libamu/mount_fs.c (mount_fs): use safer XFREE() not free().

	* conf/umount/umount_linux.c (umount_fs): strtok is destructive,
	so use strdup'ed string.

	* conf/mount/mount_linux.c (parse_opts): strtok is destructive, so
	use strdup'ed string.

2005-03-04  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd.conf.5, doc/am-utils.texi (cache_duration
	Parameter): clarify actual behavior: this Parameter affects
	initial mount timeout as well as the linear backoff what happens
	the initial failed EBUSY unmount.

	* doc/am-utils.texi (opts Option): better explanation of
	utimeout=N mount pseudo-option.

	* amd/amd.h (AM_TTL, AM_TTL_W): better comments, minor cleanup.

2005-03-02  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* AUTHORS: add Dan Ottavio.

	* scripts/amd.conf.5: document new debug_mtab_file option.

	* scripts/amd.conf-sample (debug_mtab_file): show example.

	* doc/am-utils.texi (debug_mtab_file Parameter): document new
	option.

	* conf/mtab/mtab_{file,mach3}.c (open_locked_mtab): if mtab file
	doesn't exist by the time Amd tries to exist, return a 0 rather
	than hang indefinitely.

	* amd/conf.c (gopt_debug_mtab_file): new function to parse
	debug_mtab_file option.

	* amd/amd.h: placeholder for debug_mtab_file string.
	Define default debug_mtab_file to "/tmp/mtab".

	* NEWS: document new debug_mtab_file option.

2005-03-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_{sockets,tli}.c (amu_get_myaddress): when
	users want Amd's NFS service to bind to some arbitrary "localhost"
	address, show which address was actually resolved and bound to.

2005-03-01  Erez Zadok  <ezk@cs.sunysb.edu>
