@@ -27,7 +27,6 @@ static inline char *autofs_strdup_space_hack(char *s)
 #define AUTOFS_DIRECT_FS_FLAGS	(FS_DIRECT | FS_NOTIMEOUT | FS_BACKGROUND | FS_AMQINFO | FS_DIRECTORY | FS_AUTOFS)
 #define AUTOFS_ERROR_FS_FLAGS	(FS_DISCARD)
 #define AUTOFS_HOST_FS_FLAGS	(FS_MKMNT | FS_BACKGROUND | FS_AMQINFO)
-#define AUTOFS_INHERIT_FS_FLAGS	(FS_DISCARD)
 #define AUTOFS_LINK_FS_FLAGS	(FS_MBACKGROUND)
 #define AUTOFS_LINKX_FS_FLAGS	(FS_MBACKGROUND)
 #define AUTOFS_NFSL_FS_FLAGS	(FS_BACKGROUND | FS_AMQINFO | FS_ON_AUTOFS)
